# rag-cli

./: .gitignore  README.md  pyproject.toml
src/rag/: chunker.py  embedder.py  main.py  pipeline.py  store.py
